--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "gh-pages": "^1.2.0"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
-    "react-scripts": "1.1.4"
+    "react-markdown": "^3.3.2",
+    "react-scripts": "1.1.4",
+    "semantic-ui-css": "^2.3.1",
+    "semantic-ui-react": "^0.81.1"
   }
 }
